# HelpDev

./: README.md  meson.build  org.gnome.gitlab.HelpDev.json  org.gnome.gitlab.HelpDev.json~
.flatpak-builder/cache/refs/heads/x86_64-org.gnome.gitlab.HelpDev.json/: init
.flatpak-builder/checksums/: x86_64-org.gnome.gitlab.HelpDev.json
.zed/: tasks.json
data/: meson.build  org.gnome.gitlab.HelpDev.desktop.in  org.gnome.gitlab.HelpDev.gschema.xml  org.gnome.gitlab.HelpDev.metainfo.xml.in
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  browser.vala  doc_list_model.vala  helpdev.gresource.xml  main.vala  meson.build  pref_dialog.ui  pref_dialog.vala  sidebar.ui  sidebar.vala  window.ui  window.vala
